--- a/poisson.html
+++ b/poisson.html
@@ -22,7 +22,6 @@
         }
         h1, h2, h3 { color: #2c3e50; border-bottom: 2px solid #ecf0f1; padding-bottom: 10px; }
         
-        /* タブのスタイル */
         .tab-container {
             display: flex;
             cursor: pointer;
@@ -49,7 +48,6 @@
             border-bottom: 3px solid #3498db;
         }
 
-        /* コンテンツエリア */
         .content { display: none; }
         .content.active { display: block; }
 
@@ -77,7 +75,6 @@
         }
         button:hover { background-color: #2980b9; }
 
-        /* 結果表示 */
         .result-box {
             margin-top: 25px; background-color: #f8f9fa;
             border: 1px solid #e9ecef;
@@ -85,7 +82,7 @@
         }
         .step {
             margin-bottom: 20px; border-bottom: 1px dashed #bdc3c7; padding-bottom: 15px;
-            word-wrap: break-word; /* 長い数字でのレイアウト崩れ防止 */
+            word-wrap: break-word;
         }
         .step:last-child { border-bottom: none; }
         .step-title { font-weight: bold; color: #555; margin-bottom: 8px; border-left: 4px solid #3498db; padding-left: 8px;}
@@ -99,7 +96,6 @@
             padding: 15px; border-radius: 5px; margin-top: 15px;
         }
         
-        /* 数字の表示崩れを防ぐためのクラス */
         .calc-value {
             font-family: monospace;
             background: #fff;
@@ -111,7 +107,6 @@
             font-size: 0.9em;
         }
 
-        /* 説明エリア*/
         .explanation-section {
             background: #fff; padding: 30px; border-radius: 8px;
             margin-top: 30px; border-top: 4px solid #95a5a6;
@@ -125,7 +120,6 @@
         ol li { margin-bottom: 8px; }
         ul li { margin-bottom: 5px; }
 
-        /* --- 追加スタイル: 切替用 --- */
         .mode-selection {
             margin-bottom: 15px;
             padding: 10px;
@@ -139,7 +133,7 @@
             cursor: pointer;
         }
         .calc-inputs {
-            display: none; /* 初期状態は非表示 */
+            display: none; 
             border-left: 3px solid #3498db;
             padding-left: 15px;
             margin-bottom: 15px;
@@ -310,7 +304,6 @@
             document.getElementById(tabName).classList.add('active');
         }
 
-        /* --- 追加: モード切替関数 --- */
         function toggleLambdaMode() {
             const mode = document.querySelector('input[name="lambda_mode"]:checked').value;
             const directGroup = document.getElementById('lambda_direct_group');
@@ -338,7 +331,6 @@
                 calcGroup.style.display = 'none';
             }
         }
-        /* --------------------------- */
 
         function factorialDecimal(n) {
             if (n === 0 || n === 1) return new Decimal(1);
@@ -348,7 +340,6 @@
         }
 
         function calculatePoissonBasic() {
-            /* 修正: モード判定を追加 */
             const mode = document.querySelector('input[name="lambda_mode"]:checked').value;
             let lamInput = "";
             let calcMsg = "";
@@ -357,14 +348,12 @@
                 const obsEvents = document.getElementById('obs_events').value;
                 const obsTime = document.getElementById('obs_time').value;
                 if (obsEvents !== "" && obsTime !== "" && parseFloat(obsTime) !== 0) {
-                    // 簡易計算してセット
                     lamInput = (parseFloat(obsEvents) / parseFloat(obsTime)).toString();
                     calcMsg = `<p style="font-size:0.9em; color:#555;">(算出された平均発生回数 \(\lambda = ${new Decimal(lamInput).toSignificantDigits(6)}\))</p>`;
                 }
             } else {
                 lamInput = document.getElementById('lambda').value;
             }
-            /* --------------------------- */
 
             const kInput = document.getElementById('k').value;
             const resBox = document.getElementById('result-basic');
@@ -395,7 +384,6 @@
         // MTBF計算
         function calculateMTBF() {
             try {
-                /* 修正: モード判定を追加 */
                 const mode = document.querySelector('input[name="seu_mode"]:checked').value;
                 let seuStr = "";
                 let calcMsg = "";
