--- a/poisson.html
+++ b/poisson.html
@@ -239,7 +239,7 @@
                     <input type="number" id="seu_time" placeholder="例: 3600">
                     <span class="unit">[sec]</span>
                 </div>
-                <small style="color:#666;">※ SEU率 = 発生総数 ÷ 総試験時間 で計算します。</small>
+                <small style="color:#666;">※ 1bitあたりのSEU率 = 発生総数 ÷ (総試験時間 × 評価レジスタ数N) で算出します。</small>
             </div>
 
             <div class="input-group" id="seu_direct_group">
@@ -316,7 +316,7 @@
                     <input type="number" id="seu_time_qmr" placeholder="例: 3600">
                     <span class="unit">[sec]</span>
                 </div>
-                <small style="color:#666;">※ SEU率 = 発生総数 ÷ 総試験時間 で計算します。</small>
+                <small style="color:#666;">※ 1bitあたりのSEU率 = 発生総数 ÷ (総試験時間 × 評価レジスタ数N) で算出します。</small>
             </div>
 
             <div class="input-group" id="seu_direct_group_qmr">
